--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <meta name="google-site-verification" content="0bBpgxSFwDDpxNmm1rEvGVKHmDhjxRmugR6PjjKBIpk" />
+    
     <meta charset="UTF-8">
     <title>Advanced Sandblast - Seattle Mobile Surface Restoration Specialists</title>
     <style>
